Add evtTracker to update sources, and comment not working add-ons

--- a/.github/workflows/updateSourcesForAddons.yml
+++ b/.github/workflows/updateSourcesForAddons.yml
@@ -17,18 +17,19 @@ jobs:
           'charInfo',
           'clipContentsDesigner',
           'clock',
-          'columnsReview',
+          #'columnsReview',
           'controlUsageAssistant',
-          'cursorLocator',
+          #'cursorLocator',
           'customNotifications',
           'dayOfTheWeek',
           'debugHelper',
-          'dropbox',
+          #'dropbox',
           'easyTableNavigator',
           'emoticons',
           'eMule',
           'enhancedAnnotations',
           'enhancedTouchGestures',
+          'evtTracker',
           'goldenCursor',
           'goldwave',
           'inputLock',
