--- a/.github/workflows/importToCrowdin.yml
+++ b/.github/workflows/importToCrowdin.yml
@@ -26,6 +26,10 @@ jobs:
           path: addon-${{ inputs.repo }}
           fetch-depth: 0
           ref: stable
+      - name: Setup Python
+        uses: actions/setup-python@v6
+        with:
+          python-version: '3.13' 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
