--- a/.github/workflows/importToCrowdin.yml
+++ b/.github/workflows/importToCrowdin.yml
@@ -72,9 +72,11 @@ jobs:
         uses: actions/download-artifact@v5
         with:
           path: ${{ inputs.repo }}
+      - name: Install the latest version of uv
+        uses: astral-sh/setup-uv@v6
       - name: Generate xliff
         run: |
-          python ./utils/markdownTranslate.py generateXliff -m ${{ inputs.repo }}/${{ inputs.repo }}.md -o ${{ inputs.repo }}.xliff
+          uv run ./utils/markdownTranslate.py generateXliff -m ${{ inputs.repo }}/${{ inputs.repo }}.md -o ${{ inputs.repo }}.xliff
 
       - name: Commit and push
         run: |
@@ -88,7 +90,7 @@ jobs:
           git push
 
       - name: Upload pot to Crowdin
-        run: python utils/l10nUtil.py uploadSourceFile --localFilePath=${{ inputs.repo}}/${{ inputs.repo}}.pot
+        run: uv run python utils/l10nUtil.py uploadSourceFile --localFilePath=${{ inputs.repo}}/${{ inputs.repo}}.pot
         env:
           crowdinProjectID: ${{ vars.CROWDIN_ID }}
           crowdinAuthToken: ${{ secrets.CROWDIN_TOKEN }}
