--- a/.github/workflows/importToCrowdin.yml
+++ b/.github/workflows/importToCrowdin.yml
@@ -20,12 +20,25 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout add-on
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
         with:
           repository: nvdaaddons/${{ inputs.repo }}
           fetch-depth: 0
           ref: stable
           submodules: true
+      - name: Cache pot
+        id: cachePot
+        uses: actions/cache@v4
+        with:
+          path: ${{ inputs.repo }}.pot
+          key: ${{ inputs.repo }}-${{ hashFiles('**/*.py') }}
+      - name: Cache md
+        id: cacheMd
+        uses: actions/cache@v4
+        with:
+          path: readme.md
+          key: ${{ inputs.repo }}-${{ hashFiles('readme.md') }}
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -74,7 +87,7 @@ jobs:
         with:
           path: ${{ inputs.repo }}
       - name: "Set up Python"
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@v6
         with:
           python-version-file: ".python-version"
       - name: Install the latest version of uv
