--- a/.github/workflows/importToCrowdin.yml
+++ b/.github/workflows/importToCrowdin.yml
@@ -30,22 +30,23 @@ jobs:
         id: cachePot
         uses: actions/cache@v4
         with:
-          path: ${{ github.workspace }}/${{ inputs.repo}}.pot
+          path: addon-${{ inputs.repo}}/${{ inputs.repo }}.pot
           key: ${{ inputs.repo }}-${{ hashFiles('**/*.py') }}
       - name: Cache md
         id: cacheMd
         uses: actions/cache@v4
         with:
-          path: ${{ github.workspace }}/readme.md
+          path: addon-${{ inputs.repo}}/readme.md
           key: ${{ inputs.repo }}-${{ hashFiles('readme.md') }}
-
       - name: Install dependencies
+        if: steps.cachePot.outputs.cache-hit != 'true'
         run: |
           python -m pip install --upgrade pip
           pip install scons markdown
           sudo apt update
           sudo apt install gettext
       - name: Build add-on and pot file
+        if: steps.cache.outputs.cache-hit != 'true'
         run: |
           scons
           scons pot
@@ -53,7 +54,6 @@ jobs:
         run: |
           if [ -d "addon-${{ inputs.repo }}" ]; then
           echo "Warning: Folder already exists."
-          exit 1
           else
           mkdir addon-${{ inputs.repo }}
           fi
