--- a/.github/workflows/importToCrowdin.yml
+++ b/.github/workflows/importToCrowdin.yml
@@ -26,30 +26,23 @@ jobs:
           fetch-depth: 0
           ref: stable
           submodules: true
-      - name: Cache pot
-        id: cachePot
-        uses: actions/cache@v4
-        with:
-          path: addon-${{ inputs.repo}}/${{ inputs.repo }}.pot
-          key: ${{ inputs.repo }}-${{ hashFiles('**/*.py') }}
-      - name: Cache md
-        id: cacheMd
-        uses: actions/cache@v4
-        with:
-          path: addon-${{ inputs.repo}}/readme.md
-          key: ${{ inputs.repo }}-${{ hashFiles('readme.md') }}
+
       - name: Install dependencies
-        if: steps.cachePot.outputs.cache-hit != 'true'
         run: |
           python -m pip install --upgrade pip
           pip install scons markdown
           sudo apt update
           sudo apt install gettext
       - name: Build add-on and pot file
-        if: steps.cache.outputs.cache-hit != 'true'
         run: |
           scons
           scons pot
+      - name: Cache pot
+        id: cachePot
+        uses: actions/cache@v4
+        with:
+          path: ${{ inputs.repo }}.pot
+          key: ${{ inputs.repo }}-${{ hashFiles('**/*.py') }}
       - name: Create dir for repo
         run: |
           if [ -d "addon-${{ inputs.repo }}" ]; then
