--- a/.github/workflows/importToCrowdin.yml
+++ b/.github/workflows/importToCrowdin.yml
@@ -34,8 +34,6 @@ jobs:
           repository: nvdaaddons/${{ inputs.repo }}
           fetch-depth: 0
           ref: stable
-          submodules: true
-
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -109,7 +107,7 @@ jobs:
           echo "has_changes=false" >> $GITHUB_OUTPUT
           else
           echo "has_changes=true" >> $GITHUB_OUTPUT
-          git commit -m "Update sources"
+          git commit -m "Update sources: ${{ inputs.repo }}"
           git branch -u origin/main
           git pull --rebase
           git push
