Renmove systraylist (may have problems with markdown @ruifontes

--- a/.github/workflows/updateSourcesForAddons.yml
+++ b/.github/workflows/updateSourcesForAddons.yml
@@ -53,10 +53,10 @@ jobs:
           'sayCurrentKeyboardLanguage',
           'sayProductNameAndVersion',
           'searchWith',
-          'SentenceNav''',
+          #'SentenceNav''',
           'speechLogger',
           'stationPlaylist',
-          'systrayList',
+          #'systrayList',
           'tonysEnhancements',
           'unicodeBrailleInput',
           'updateChannel',
