Add systrayList to update sources

--- a/.github/workflows/updateSourcesForAddons.yml
+++ b/.github/workflows/updateSourcesForAddons.yml
@@ -56,7 +56,7 @@ jobs:
           #'SentenceNav''',
           'speechLogger',
           'stationPlaylist',
-          #'systrayList',
+          'systrayList',
           'tonysEnhancements',
           'unicodeBrailleInput',
           'updateChannel',
