--- a/.github/workflows/importToCrowdin.yml
+++ b/.github/workflows/importToCrowdin.yml
@@ -74,11 +74,11 @@ jobs:
         run: |
           if [ -d "${{ inputs.repo }}" ]; then
           echo "Warning: Folder already exists."
+          mv ${{ inputs.repo }}/${{ inputs.repo }}.pot ${{ inputs.repo }}/old.pot -f
+          cp ${{ inputs.repo }}/${{ inputs.repo }}.xliff ${{ inputs.repo }}/old.xliff -f
           else
           mkdir ${{ inputs.repo }}
           fi
-          mv ${{ inputs.repo }}/${{ inputs.repo }}.pot ${{ inputs.repo }}/old.pot -f
-          mv ${{ inputs.repo }}/${{ inputs.repo }}.xliff ${{ inputs.repo }}/old.xliff -f
       - name: Download artifact
         uses: actions/download-artifact@v5
         with:
@@ -127,7 +127,7 @@ jobs:
         if: ${{ inputs.update }}
         run: |
           uv run ./utils/crowdinSync.py uploadSourceFile ${{inputs.repo }}/${{ inputs.repo }}.pot --old ${{ inputs.repo }}/old.pot
-          uv run ./utils/crowdinSync.py uploadSourceFile ${{ inputs.repo }}/${{ inputs.repo }}.xliff --old ${{ inputs.repo }}/${{ inputs.repo }}.xliff
+          uv run ./utils/crowdinSync.py uploadSourceFile ${{ inputs.repo }}/${{ inputs.repo }}.xliff --old ${{ inputs.repo }}/old.xliff
         env:
           crowdinProjectID: ${{ vars.CROWDIN_ID }}
           crowdinAuthToken: ${{ secrets.CROWDIN_TOKEN }}
