Use l10nUtil to upload files with old argument

--- a/.github/workflows/importToCrowdin.yml
+++ b/.github/workflows/importToCrowdin.yml
@@ -127,7 +127,7 @@ jobs:
         if: ${{ inputs.update }}
         run: |
           uv run ./utils/l10nUtil.py uploadSourceFile --localFilePath=${{inputs.repo }}/${{ inputs.repo }}.pot --old=${{ inputs.repo }}/old.pot
-          uv run ./utils/crowdinSync.py uploadSourceFile --localFilePath=${{ inputs.repo }}/${{ inputs.repo }}.xliff --old=${{ inputs.repo }}/old.xliff
+          uv run ./utils/l10nUtil.py uploadSourceFile --localFilePath=${{ inputs.repo }}/${{ inputs.repo }}.xliff --old=${{ inputs.repo }}/old.xliff
         env:
           crowdinProjectID: ${{ vars.CROWDIN_ID }}
           crowdinAuthToken: ${{ secrets.CROWDIN_TOKEN }}
