--- a/.github/workflows/importToCrowdin.yml
+++ b/.github/workflows/importToCrowdin.yml
@@ -70,12 +70,10 @@ jobs:
     steps:
       - name: Checkout main branch
         uses: actions/checkout@v5
-      - name: Create dir for repo and rename pot file
+      - name: Create dir for repo
         run: |
           if [ -d "${{ inputs.repo }}" ]; then
           echo "Warning: Folder already exists."
-          mv ${{ inputs.repo }}/${{ inputs.repo }}.pot ${{ inputs.repo }}/old.pot -f
-          cp ${{ inputs.repo }}/${{ inputs.repo }}.xliff ${{ inputs.repo }}/old.xliff -f
           else
           mkdir ${{ inputs.repo }}
           fi
@@ -126,8 +124,8 @@ jobs:
       - name: Update sources
         if: ${{ inputs.update }}
         run: |
-          uv run ./utils/l10nUtil.py uploadSourceFile --localFilePath=${{inputs.repo }}/${{ inputs.repo }}.pot --old=${{ inputs.repo }}/old.pot
-          uv run ./utils/l10nUtil.py uploadSourceFile --localFilePath=${{ inputs.repo }}/${{ inputs.repo }}.xliff --old=${{ inputs.repo }}/old.xliff
+          uv run ./utils/crowdinSync.py uploadSourceFile ${{inputs.repo }}/${{ inputs.repo }}.pot
+          uv run ./utils/crowdinSync.py uploadSourceFile ${{ inputs.repo }}/${{ inputs.repo }}.xliff
         env:
           crowdinProjectID: ${{ vars.CROWDIN_ID }}
           crowdinAuthToken: ${{ secrets.CROWDIN_TOKEN }}
