--- a/.github/workflows/updateSourcesForAddons.yml
+++ b/.github/workflows/updateSourcesForAddons.yml
@@ -69,7 +69,7 @@ jobs:
       fail-fast: false
       max-parallel: 1
       matrix:
-        repo: ${{ inputs.repos }}
+        repo: ${{ fromJSON(inputs.repos) }}
     with:
       repo: ${{ matrix.repo }}
       update: true
