--- a/.github/workflows/updateSourcesForAddons.yml
+++ b/.github/workflows/updateSourcesForAddons.yml
@@ -7,6 +7,8 @@ jobs:
   setMatrix:
     runs-on: ubuntu-latest
     steps:
+    - name: Checkout main branch
+      uses: actions/checkout@v5
     - name: Set matrix
       run: |
         matrix=$(cat ./.github/workflows/repos.txt)
