Fix workflow and list of repos with Copilot suggestions

--- a/.github/workflows/updateSourcesForAddons.yml
+++ b/.github/workflows/updateSourcesForAddons.yml
@@ -11,7 +11,7 @@ jobs:
       uses: actions/checkout@v5
     - name: Set matrix
       run: |
-        matrix=$(cat ./.github/workflows/repos.txt)
+        matrix=$(jq -R . < ./.github/workflows/repos.txt | jq -s .)
         echo "matrix=$matrix" >> $GITHUB_OUTPUT
 
   updateSourcesForAddons:
