Use quotation marks in output, suggested by Copilot

--- a/.github/workflows/updateSourcesForAddons.yml
+++ b/.github/workflows/updateSourcesForAddons.yml
@@ -13,7 +13,7 @@ jobs:
       id: setMatrix
       run: |
         matrix=$(jq -R . < ./.github/workflows/repos.txt | jq -s .)
-        echo "matrix=$matrix" >> $GITHUB_OUTPUT
+        echo "matrix=$matrix" >> "$GITHUB_OUTPUT"
 
   updateSourcesForAddons:
     needs: setMatrix
