Fix with Copilot

--- a/.github/workflows/updateSourcesForAddons.yml
+++ b/.github/workflows/updateSourcesForAddons.yml
@@ -12,8 +12,7 @@ jobs:
     - name: Set matrix
       id: setMatrix
       run: |
-        matrix=$(jq -R . < ./.github/workflows/repos.txt | jq -s .)
-        echo "matrix=$matrix" >> $GITHUB_OUTPUT
+        echo "matrix=$(echo "$matrix" | jq -c .)" >> $GITHUB_OUTPUT
 
   updateSourcesForAddons:
     needs: setMatrix
