--- a/.github/workflows/updateSourcesForAddons.yml
+++ b/.github/workflows/updateSourcesForAddons.yml
@@ -21,7 +21,7 @@ jobs:
       fail-fast: false
       max-parallel: 1
       matrix:
-        repo: ${{ fromJSON(needs.setMatrix.outputs.matrix) }}
+        repo: ${{ needs.setMatrix.outputs.matrix }}
     with:
       repo: ${{ matrix.repo }}
       update: true
