--- a/.github/workflows/updateSourcesForAddons.yml
+++ b/.github/workflows/updateSourcesForAddons.yml
@@ -5,6 +5,7 @@ on:
 
 jobs:
   setMatrix:
+    runs-on: ubuntu-latest
     steps:
     - name: Checkout main branch
       uses: actions/checkout@v5
