--- a/.github/workflows/updateSourcesForAddons.yml
+++ b/.github/workflows/updateSourcesForAddons.yml
@@ -12,7 +12,10 @@ jobs:
     - name: Set matrix
       run: |
         repos=$(ls -d */ | jq -R -s -c  'split("\n")[:-1]')
-        echo "matrix=$repos" >> $GITHUB_OUTPUT
+        echo "repos=$repos" >> $GITHUB_ENV
+    outputs:
+      repos: ${{ env.repos }}
+      
   updateSourcesForAddons:
     needs: setMatrix
     uses: ./.github/workflows/importToCrowdin.yml
@@ -20,7 +23,7 @@ jobs:
       fail-fast: false
       max-parallel: 1
       matrix:
-        repo: ${{ needs.setMatrix.outputs.matrix }}
+        repo: ${{ needs.setMatrix.outputs.repos }}
     with:
       repo: ${{ matrix.repo }}
       update: true
