--- a/.github/workflows/updateSourcesForAddons.yml
+++ b/.github/workflows/updateSourcesForAddons.yml
@@ -23,7 +23,7 @@ jobs:
       fail-fast: false
       max-parallel: 1
       matrix:
-        repo: ${{ needs.setMatrix.outputs.repos }}
+        repo: ${{ fromJSON(needs.setMatrix.outputs.repos) }}
     with:
       repo: ${{ matrix.repo }}
       update: true
