--- a/.github/workflows/transportSourcesAndTranslations.yml
+++ b/.github/workflows/transportSourcesAndTranslations.yml
@@ -1,9 +1,13 @@
-name: Update
+name: Transport sources and translations
 
 # https://thomasthornton.cloud/2024/09/18/dynamic-matrices-in-github-actions/
 
 on:
   workflow_dispatch:
+    inputs:
+      updateAddon:
+        description: 'True to update an add-on with translations, false to submit translations to Crowdin'
+        type: boolean
 
 jobs:
   setMatrix:
@@ -21,6 +25,7 @@ jobs:
       
   updateSourcesForAddons:
     needs: setMatrix
+    if: ${{ !updateAddon }}
     uses: ./.github/workflows/importToCrowdin.yml
     strategy:
       fail-fast: false
@@ -30,4 +35,18 @@ jobs:
     with:
       repo: ${{ matrix.repo }}
       update: true
+    secrets: inherit
+
+      
+  submitTranslationsToAddons:
+    needs: setMatrix
+    if: ${{ updateAddon }}
+    uses: ./.github/workflows/updateAddon.yml
+    strategy:
+      fail-fast: false
+      max-parallel: 1
+      matrix:
+        repo: ${{ fromJSON(needs.setMatrix.outputs.repos) }}
+    with:
+      repo: ${{ matrix.repo }}
     secrets: inherit
