--- a/.github/workflows/updateAddon.yml
+++ b/.github/workflows/updateAddon.yml
@@ -5,7 +5,7 @@ on:
     inputs:
       repo:
         description: 'Repository name'
-        required: false
+        required: true
   workflow_call:
     inputs:
       repo:
@@ -20,31 +20,17 @@ jobs:
 
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v4
+      uses: actions/checkout@v5
 
     - name: Checkout add-on
-      uses: actions/checkout@v4
+      uses: actions/checkout@v5
       with:
         repository: nvdaaddons/${{ inputs.repo }}
         ref: stable
         path: addon-${{ inputs.repo }}
         TOKEN: ${{ secrets.PUSH_TO_REPOS }}
-    - name: Set up python
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.11'
-
-    - name: Install dependencies
+    - name: Install gettext
       run: |
-        python -m pip install --upgrade pip
-        pip install scons
-        pip install crowdin-api-client==1.21.0
-        pip install lxml requests 
-        pip install Markdown==3.7
-        pip install mdx_truly_sane_lists==1.3
-        pip install markdown-link-attr-modifier==0.2.1
-        pip install mdx-gh-links==0.4
-        pip install nh3==0.2.19
         sudo apt update
         sudo apt install gettext
     - name: Build add-on
@@ -72,7 +58,6 @@ jobs:
         cd addon-${{ inputs.repo }}
         git config --local user.name github-actions
         git config --local user.email github-actions@github.com
-        git status
         git add addon
         if git diff --staged --quiet; then
         echo "Nothing added to commit."
