Set max parallel to 1 when submitting translations to add-ons

--- a/.github/workflows/updateAddons.yml
+++ b/.github/workflows/updateAddons.yml
@@ -24,6 +24,8 @@ jobs:
       fail-fast: false
       matrix:
         repo: ${{ fromJSON(needs.setMatrix.outputs.repos) }}
+      max-parallel: 1
+    
     with:
       repo: ${{ matrix.repo }}
     secrets: inherit
